--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ dist-ssr
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
+!.vscode/global.code-snippets.json
+!.vscode/settings.json
 .idea
 .DS_Store
 *.suo
