--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
 # Logs
 logs
-*.log
+**/*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
+**/node_modules
 dist
 dist-ssr
 *.local
@@ -18,7 +18,7 @@ dist-ssr
 !.vscode/global.code-snippets.json
 !.vscode/settings.json
 .idea
-.DS_Store
+**/.DS_Store
 *.suo
 *.ntvs*
 *.njsproj
