--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@ dist-ssr
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
-!.vscode/global.code-snippets.json
+!.vscode/global.code-snippets
 !.vscode/settings.json
 .idea
 **/.DS_Store
