--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "stylelint-config-prettier-scss": "^0.0.1",
     "stylelint-config-standard-scss": "^6.1.0",
     "stylelint-order": "^5.0.0",
+    "stylelint-prettier": "^2.0.0",
     "stylelint-stylus": "^0.17.0",
     "tailwindcss": "^3.2.4",
     "vite": "^3.2.3"
